Revert "Fix tracker panel overflow and make 5 chart grid lines evenly spaced"
This reverts commit 34d023587ed4207261c9d244d88a61b1779db1f6.

--- a/src/components/tracker/TrackerClient.module.css
+++ b/src/components/tracker/TrackerClient.module.css
@@ -74,7 +74,7 @@
 
 .chart {
   width: 100%;
-  height: 250px;
+  height: 280px;
   margin-top: 18px;
 }
 
@@ -116,7 +116,7 @@
 }
 
 .scoreRow {
-  margin: 24px auto 0;
+  margin: 69px auto 0;
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 8px;
